create github pages

--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/l">free web templates</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
+<section class="engine"><a href="https://mobirise.info/p">site templates free download</a></section><section class="mbr-section form1 cid-rqMmyLldeY" id="form1-j">
 
     
 
@@ -104,7 +104,7 @@
         <div class="row justify-content-center">
             <div class="media-container-column col-lg-8" data-form-type="formoid">
                 <!---Formbuilder Form--->
-                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZE3fjwssKnoRgBB10neQpxy0PNJTOuKzOqsJ74mCmouxBIns9QtipfnCdmt0wobBKKu5OTPv5r88yOxzqxEssNfKHVXP653+0Gz1UjPh38iO5oRw2kAA+jt2INyN7ODh">
+                <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ke7X6ERZZRTHaYJVLZKxkqa5IjknUGWTIxcRmGsTlN1V0V6uug/Hn8jb0zxtHrXf3CEhalVnNnYZlEg+gChakOgteYMnf86CLh9AmR1VMZCQDtfMW8XHcYBvKuyCn0OE">
                     <div class="row">
                         <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">Thanks for filling out the form!</div>
                         <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
@@ -206,7 +206,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="dfhOUx034+st6kY7fDkuVR8ufO+ZPlR8NCHY8D/qjbh2WP4pH1GstXr4Krr3j2ykuyygpqjwx7z8QaUdlM80pXaq/f4XT7r3o7l1liYUT2yr/PY8oo6/5uFS+t7vMmW7">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="ZjXwc6/mInN6oyhAIBCNOpPlnl9dRL9DseZp+xOSLfR9YRzXSBFQ9L1Hmf1+Z7JHXFjri1ZVVpP2wnVg9JE3vZAj5ZMgUjFqZN2umThwMeXmz8Ms0t46pegOs8KOVlNQ">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
