--- a/about.html
+++ b/about.html
@@ -87,7 +87,7 @@
     </nav>
 </section>
 
-<section class="engine"><a href="https://mobirise.info/r">free bootstrap template</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
+<section class="engine"><a href="https://mobirise.info">Mobirise</a></section><section class="mbr-section article content10 cid-rqENyAa1pR" id="content10-c">
     
      
 
@@ -171,7 +171,7 @@
                 <p class="mbr-text form-text mbr-fonts-style display-7">إشترك معنا لتصلك عروضنا وجديدنا</p>
                 <div class="media-container-column" data-form-type="formoid">
                     <!---Formbuilder Form--->
-                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="vKttrxh8b6WBW0PSg8/WR5tKc3Pg1gCVo5XaTnyKhiA9/i8Tkw8i7Npmb0GC3+Z9j4hOgdjiBu7/P+dS472HYVYPnmjIz05lZl5WaxdaREEkmCjBlVwmBv/nIMZELYOM">
+                    <form action="https://mobirise.com/" method="POST" class="mbr-form form-with-styler" data-form-title="Mobirise Form"><input type="hidden" name="email" data-form-email="true" value="7Ccq2SrF4Yi5/bH3NiBbpMFaddfliMoOMdjWBaTsA/8Pa/u8M9wo+eBhxfWpn8eHlbemUw0g+5Fhx0Fwa74vLfkUhcnF+YOVLvXlSTbwqgpTfw6oIG09v4W1DDxDcHM1">
                         <div class="row form-inline justify-content-center">
                             <div hidden="hidden" data-form-alert="" class="alert alert-success col-12">شكرا للإشتراك</div>
                             <div hidden="hidden" data-form-alert-danger="" class="alert alert-danger col-12">
